# hy-ohtu-syksy-2021-tehtavat

./: tag.md
int-joukko/src/: int_joukko.py
laskin/src/: erotus.py  kayttoliittyma.py  kumoa.py  nollaa.py  operaatio.py  sovelluslogiikka.py  summa.py
login-robot/src/: app.py
login-robot/src/services/: user_service.py
login-robot/src/tests/: login.robot  register.robot
maksukortti-mock/src/: kassapaate.py
maksukortti-mock/src/tests/: kassapaate_test.py
nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
nhl-statistics-1/: pyproject.toml
nhl-statistics-1/src/: index.py  statistics.py
nhl-statistics-1/src/tests/: statistics_test.py
poetry-web/: pyproject.toml
project-reader/src/: project_reader.py
query-language/src/: index.py  matchers.py  query_builder.py
tennis/src/: index.py  player.py  tennis_game.py
tennis/src/tests/: tennis_game_test.py
verkkokauppa-1/: .gitignore  pyproject.toml
verkkokauppa-1/src/: index.py  kauppa.py
verkkokauppa-1/src/tests/: kauppa_test.py
web-login-robot/src/services/: user_service.py
web-login-robot/src/tests/: home.robot  login.robot  login_resource.robot  register.robot  resource.robot
